--- a/static/css/main.css
+++ b/static/css/main.css
@@ -100,7 +100,7 @@ body {
 
 body .nav-pills .nav-link.active {
 	font-size: 18px;
-	background-color: #4A372B;
+	background-color: #808080;
 	font-family: 'Ubuntu', sans-serif !important;
 	color: white !important;
 	/* color: white !important;
