--- a/templates/papers.html
+++ b/templates/papers.html
@@ -29,17 +29,11 @@
 <ul class="nav nav-pills justify-content-center">
   <li class="nav-item active">
     <a class="nav-link text-muted active" data-toggle="tab" role="tab" aria-controls="nav-home"
-      aria-selected="true">Browse
+      aria-selected="true">Search/Browse
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link text-muted" href="paper_vis_timeline.html">Timeline</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="paper_vis_citation_graph.html">Citation Graph</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-muted" href="paper_vis_statistics.html">Statistics</a>
+    <a class="nav-link text-muted" href="add_paper.html">Add Papers</a>
   </li>
 </ul>
 
