--- a/templates/base.html
+++ b/templates/base.html
@@ -81,8 +81,8 @@
     {% block header %}
     {% set navigation_bar = [
     ('index.html', 'Home'),
-    ('papers.html', 'Advanced Search'),
-    ('add_paper.html', 'Add Paper'),
+    ('papers.html', 'Papers'),
+    ('faq.html', 'Meetings'),
     ('join_us.html', 'Join Us'),
     ('faq.html', 'FAQ')
     ] -%}
@@ -131,43 +131,6 @@
     {% endblock %}
 
 
-    {% block footer %}
-
-
-    <!-- Footer -->
-    <footer class="footer"
-      style="background-color: #353535; width: 100%; height: 8vh; display: flex; justify-content: center; align-items: center; ">
-      <a class="fas" style="cursor: pointer; margin-right: auto; padding-left: 10px;"
-        href="https://twitter.com/neural_fields" target="_blank">
-        <img src="static/images/twitter_logo.png" style="width: 30px; height: 24px;">
-      </a>
-      <a href="https://visual.cs.brown.edu/" target="_blank"><img src="static/images/Brown_logo.png"
-    style="height: 6vh; padding-right: 1vw;"></a>
-      <a href="http://www.scenerepresentations.org/" target="_blank"><img src="static/images/MIT_logo.png" style="height: 2.7vh"></a>
-      <a style="color: white; margin-left: auto; padding-right: 10px;" href="mailto:neuralfields@brown.edu"
-        target="_blank">Contact Us</a>
-    </footer>
-
-    <!-- Code for hash tags -->
-    <script type="text/javascript">
-      $(document).ready(function () {
-        if (window.location.hash !== "") {
-          $(`a[href="${window.location.hash}"]`).tab("show");
-        }
-
-        $("a[data-toggle='tab']").on("shown.bs.tab", function (e) {
-          const hash = $(e.target).attr("href");
-          if (hash.substr(0, 1) === "#") {
-            const position = $(window).scrollTop();
-            window.location.replace(`#${hash.substr(1)}`);
-            $(window).scrollTop(position);
-          }
-        });
-      });
-    </script>
-
-    <!-- footer block ends here -->
-    {% endblock %}
   </body>
 
 </html>
