--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -82,18 +82,21 @@
     </head>
 
     <body>
-        <!-- NAV -->
-        {% block header %}
-        {% set navigation_bar = [
-        ('index.html', 'Home'),
-        ('papers.html', 'Advanced Search'),
-        ('add_paper.html', 'Add Paper'),
-        ('join_us.html', 'Join Us'),
-        ('faq.html', 'FAQ')
-        ] -%}
+    <!-- NAV -->
+    {% block header %}
+    {% set navigation_bar = [
+    ('index.html', 'Home'),
+    ('papers.html', 'Papers'),
+    ('faq.html', 'Meetings'),
+    ('join_us.html', 'Join Us'),
+    ('faq.html', 'FAQ')
+    ] -%}
 
         <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #EFECE5;" id="main-nav">
             <div class="container">
+                <a class="navbar-brand" href="index.html">
+                  <img class="logo" src="{{config.logo.long}}" style="width: 300px;"/>
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -132,41 +135,6 @@
         <!-- body block ends here-->
         {% endblock %}
 
-
-        {% block footer %}
-
-
-        <!-- Footer -->
-        <footer class="footer" style="background-color: #353535; position: fixed; bottom: 0px; width: 100%; height: 8vh; display: flex; justify-content: center; align-items: center; ">
-                <a class="fas" style="cursor: pointer; margin-right: auto; padding-left: 10px;" href="https://twitter.com/neural_fields"
-                    target="_blank">
-                    <img src="static/images/twitter_logo.png" style="width: 30px; height: 24px;">
-                </a>
-            <a href="https://visual.cs.brown.edu/" target="_blank"><img src="static/images/Brown_logo.png" style="height: 6vh; padding-right: 1vw;"></a>
-            <a href="http://www.scenerepresentations.org/" target="_blank"><img src="static/images/MIT_logo.png" style="height: 2.7vh"></a>
-            <a style="color: white; margin-left: auto; padding-right: 10px;" href="mailto:neuralfields@brown.edu" target="_blank">Contact Us</a>
-        </footer>
-
-        <!-- Code for hash tags -->
-        <script type="text/javascript">
-            $(document).ready(function () {
-                if (window.location.hash !== "") {
-                    $(`a[href="${window.location.hash}"]`).tab("show");
-                }
-
-                $("a[data-toggle='tab']").on("shown.bs.tab", function (e) {
-                    const hash = $(e.target).attr("href");
-                    if (hash.substr(0, 1) === "#") {
-                        const position = $(window).scrollTop();
-                        window.location.replace(`#${hash.substr(1)}`);
-                        $(window).scrollTop(position);
-                    }
-                });
-            });
-        </script>
-
-        <!-- footer block ends here -->
-        {% endblock %}
     </body>
 
 </html>
