--- a/templates/add_paper.html
+++ b/templates/add_paper.html
@@ -45,7 +45,7 @@
 <!-- submit / update instructions section -->
 <div id="add-paper-instructions" style="padding-bottom: 45vh; padding-top: 5vh;">
     <p class="infopage-title-1">Submit a new paper (takes 1 minute)</p>
-    <p class="infopage-text">Please fill out <a class="red-hyper-link" href="https://forms.gle/5fajGXEtV1xRnG3m8" target="_blank">this Google form</a>.</p>
+    <p class="infopage-text">Please fill out <a class="red-hyper-link" href="https://forms.gle/KvVRq2xVKLDUGUza6" target="_blank">this Google form</a>.</p>
     <p class="infopage-title-1">Update an existing paper</p>
     <p class="infopage-text">Please fill out <a class="red-hyper-link" href="https://forms.gle/jMxDzgRFyHFmPbVE9" target="_blank">this Google form</a>.
     <br/>
