--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,6 +59,44 @@ body {
 	font: "Montserrat";
 }
 
+.m-card {
+	font-family: 'Ubuntu', sans-serif !important;
+	box-shadow: 0 0 14px 0 rgba(204, 204, 204, 1);
+	margin-bottom: 1em;
+	display: block;
+	overflow: hidden;
+	height: 30em;
+}
+
+.m-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.column {
+  float: left;
+  padding: 10px;
+}
+
+.left {
+  width: 65%;
+}
+
+.right {
+  width: 35%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+
 .pp-card {
 	font-family: 'Ubuntu', sans-serif !important;
 	box-shadow: 0 0 14px 0 rgba(204, 204, 204, 1);
@@ -413,7 +451,7 @@ body .carousel-control-prev {
 }
 
 .contributor-card {
-	height: 340px;
+	height: 500px;
 }
 
 .contributor-headshot {
