update padding and link in meetings

--- a/templates/meetings.html
+++ b/templates/meetings.html
@@ -35,7 +35,7 @@
             name: "Dagstuhl Seminar",
             affliation: "Wadern, Germany",
             headshotURL: "static/images/IMG_2478.jpg",
-            websiteURL: "https://yxie20.github.io/",
+            websiteURL: "https://sites.google.com/view/developmental-machine-learning/home",
             description: "Recent advances in artificial intelligence, enabled by large-scale datasets and simulation environments, have resulted in breakthrough improvements in areas like object and speech recognition, 3D navigation, and machine translation. In spite of these advances, modern artificial learning systems still pale in comparison to the competencies of young human learners. The differences between human learning and the paradigms that currently guide machine learning are striking. For example, children actively identify both the concepts to be learned and the data items used for learning, they infer the labels for learning from ambiguous perceptual data, and they learn from continuous streams of percepts without storing and curating large datasets. Artificial intelligence researchers are increasingly looking to developmental science for ideas and inspiration to improve machine learning, while developmental scientists are adopting tools from data science and machine learning to analyze large datasets and gain insights into developmental processes. This Dagstuhl Seminar will provide an opportunity to catalyze new connections between the developmental and machine learning research communities by bringing together researchers in linguistics, psychology, cognitive science and neuroscience with investigators working in computer vision, machine learning and robotics (full text). "
         },
     ];
