--- a/templates/meetings.html
+++ b/templates/meetings.html
@@ -49,7 +49,7 @@
             .append("div")
             .attr("class", "col-xs-11 col-md-11")
             .html(`
-        <div class="m-card contributor-card">
+        <div class="m-card meeting-card">
           <div class="pp-card-header" style="text-align: center;">
             <a class="red-hyper-link" ${websiteURL ? "href=" + websiteURL : ""} target="_blank"><h5 class="card-title">${name}</h5></a>
             <h6 class="card-subtitle text-muted m-1">${affliation}</h6>
