--- a/templates/join_us.html
+++ b/templates/join_us.html
@@ -17,9 +17,8 @@
 <div class="main-text" style="width: 70%; display: block; margin-left: auto; margin-right: auto; padding-bottom: 5vh;">
 <!-- Slack channel -->
 <p class="infopage-title-1">Join our Slack channel</p>
-<p class="infopage-text"> Joint the community of Neural Field researchers on our
-    <a class="red-hyper-link" href="https://join.slack.com/t/neuralfields/shared_invite/zt-1c8ckwx3a-lNQUl0jIUQNqbnLkbq_XVA">Slack channel</a>, 
-    where you can bounce off ideas, join reading groups, and ask questions.
+<p class="infopage-text"> Join the Developmental AI community on our
+    <a class="red-hyper-link" href="https://join.slack.com/t/developmentalai/shared_invite/zt-1lyn732dw-excuIUPNlZHHlNb5ZX1gjg">Slack channel</a>.
 </p>
 
 
@@ -38,6 +37,20 @@
 <p class="infopage-title-1" style="padding-top: 5vh;">Contributors</p>
 <div class="row" id="contributor-cards"></div>
 
+<!-- Contributors -->
+<p class="infopage-title-1" style="padding-top: 5vh;">Website Maintainers</p>
+<div class="row" id="website-cards"></div>
+
+
+
+<!-- Acknowledgements Section -->
+<p class="infopage-title-1" style="padding-top: 5vh;">Website History</p>
+<p class="infopage-text">This website was built on top of <a class="red-hyper-link" href="https://github.com/Mini-Conf/Mini-Conf" target="_blank">MiniConf</a> project for
+    a virtual conference in a box from <a class="red-hyper-link" href="http://twitter.com/hen_str" target="_blank">Hendrik Strobelt</a> and <a class="red-hyper-link" href="http://twitter.com/srush_nlp" target="_blank">Sasha Rush</a>.
+    Citation relation data used for generating citation graphs are derived from
+the <a class="red-hyper-link" href="https://www.semanticscholar.org/product/api" target="_blank">Semantic Scholar API</a>.
+This work was supported by an NSF grant (CNS-2038897) and the Google Research Scholar Program.
+</p>
 
 <!-- Acknowledgements Section -->
 <p class="infopage-title-1">Acknowledgements</p>
@@ -50,7 +63,7 @@ This work was supported by an NSF grant (CNS-2038897) and the Google Research Sc
 
 
 <!-- Affiliations -->
-<p class="infopage-title-1">Project Led By</p>
+<!-- <p class="infopage-title-1">Project Led By</p>
 <div class="row" style="padding-bottom: 10vh; padding-top: 5vh;">
     <div class="col-6">
         <a href="https://visual.cs.brown.edu/" target="_blank">
@@ -64,77 +77,47 @@ This work was supported by an NSF grant (CNS-2038897) and the Google Research Sc
                 style="width: 100%; display: block; margin-left: auto; margin-right: auto; padding-top: 10%;">
         </a>
     </div>
-</div>
+</div> -->
 
 </div>
 
 <script>
     const contributors = [
         {
-            name: "Yiheng Xie",
-            affliation: "Brown University, Unity Technologies",
-            headshotURL: "static/images/contributors/Yiheng_Xie.jpg",
-            websiteURL: "https://yxie20.github.io/"
+            name: "Jim Rehg",
+            affliation: "UIUC, USA",
+            headshotURL: "static/images/contributors/Jim_Rehg.jpg",
+            websiteURL: "https://rehg.org/"
         },
         {
-            name: "Towaki Takikawa",
-            affliation: "University of Toronto, NVIDIA",
-            headshotURL: "static/images/contributors/Towaki_Takikawa.png",
-            websiteURL: "https://tovacinni.github.io/"
+            name: "Pierre-Yves Oudeyer",
+            affliation: "Inria, France",
+            headshotURL: "static/images/contributors/Pierre-Yves_Oudeyer.jpeg",
+            websiteURL: "http://www.pyoudeyer.com/"
         },
         {
-            name: "Shunsuke Saito",
-            affliation: "Reality Labs Research",
-            headshotURL: "static/images/contributors/Shunsuke_Saito.png",
-            websiteURL: "http://www-scf.usc.edu/~saitos/"
+            name: "Linda Smith",
+            affliation: "Indiana University, USA",
+            headshotURL: "static/images/contributors/Linda_Smith.jpg",
+            websiteURL: "https://psych.indiana.edu/directory/faculty/smith-linda.html/"
         },
         {
-            name: "Or Litany",
-            affliation: "NVIDIA",
-            headshotURL: "static/images/contributors/Or_Litany.jpg",
-            websiteURL: "https://orlitany.github.io/"
+            name: "Sho Tsuji",
+            affliation: "University of Tokyo, Japan",
+            headshotURL: "static/images/contributors/Sho_Tsuji.jpg",
+            websiteURL: "https://sites.google.com/site/tsujish/home"
         },
         {
-            name: "Shiqin Yan",
-            affliation: "Brown University",
-            headshotURL: "static/images/contributors/Shiqin_Yan.jpg",
-            websiteURL: "https://player-eric.com/about"
+            name: "Stefan Stojanov",
+            affliation: "Georgia Tech, USA",
+            headshotURL: "static/images/contributors/Stefan_Stojanov.jpg",
+            websiteURL: "https://www.stefanstojanov.com/"
         },
         {
-            name: "Numair Khan",
-            affliation: "Brown University",
-            headshotURL: "static/images/contributors/Numair_Khan.jpg",
-            websiteURL: "http://cs.brown.edu/~nkhan6/"
-        },
-        {
-            name: "Federico Tombari",
-            affliation: "Google, TU Munich",
-            headshotURL: "static/images/contributors/Federico_Tombari.jpg",
-            websiteURL: "https://federicotombari.github.io"
-        },
-        {
-            name: "Sunny Li",
-            affliation: "Brown University",
-            headshotURL: "static/images/contributors/Sunny_Li.jpg",
-            websiteURL: ""
-        },
-        {
-            name: "James Tompkin",
-            affliation: "Brown University",
-            headshotURL: "static/images/contributors/James_Tompkin.jpg",
-            websiteURL: "https://jamestompkin.com/"
-        },
-        {
-            name: "Vincent Sitzmann",
-            affliation: "MIT",
-            headshotURL: "static/images/contributors/Vincent_Sitzmann.jpeg",
-            websiteURL: "http://vsitzmann.github.io/"
-        },
-        {
-            name: "Srinath Sridhar",
-            affliation: "Brown University",
-            headshotURL: "static/images/contributors/Srinath_Sridhar.jpeg",
-            websiteURL: "https://cs.brown.edu/people/ssrinath"
+            name: "Anh Thai",
+            affliation: "Georgia Tech, USA",
+            headshotURL: "static/images/contributors/Anh_Thai.jpg",
+            websiteURL: "https://anhthai1997.wordpress.com/"
         },
     ];
     for (contributor of contributors) {
@@ -143,6 +126,47 @@ This work was supported by an NSF grant (CNS-2038897) and the Google Research Sc
         const headshotURL = contributor.headshotURL;
         const websiteURL = contributor.websiteURL;
         d3.select("#contributor-cards")
+            .append("div")
+            .attr("class", "col-md-4 col-sm-4")
+            .html(`
+        <div class="pp-card contributor-card">
+          <div class="pp-card-header" style="text-align: center;">
+            <a class="red-hyper-link" ${websiteURL ? "href=" + websiteURL : ""} target="_blank"><h5 class="card-title">${name}</h5></a>
+            <h6 class="card-subtitle text-muted m-1">${affliation}</h6>
+          </div>
+          <a  ${websiteURL ? "href=" + websiteURL : ""} target="_blank">
+            <img src="${headshotURL}" class="contributor-headshot">
+          </a>
+        </div>
+        `);
+    }
+
+    const maintainers = [
+        {
+            name: "Jim Rehg",
+            affliation: "UIUC, USA",
+            headshotURL: "static/images/contributors/Jim_Rehg.jpg",
+            websiteURL: "https://rehg.org/"
+        },
+        {
+            name: "Stefan Stojanov",
+            affliation: "Georgia Tech, USA",
+            headshotURL: "static/images/contributors/Stefan_Stojanov.jpg",
+            websiteURL: "https://www.stefanstojanov.com/"
+        },
+        {
+            name: "Anh Thai",
+            affliation: "Georgia Tech, USA",
+            headshotURL: "static/images/contributors/Anh_Thai.jpg",
+            websiteURL: "https://anhthai1997.wordpress.com/"
+        },
+    ];
+    for (contributor of maintainers) {
+        const name = contributor.name;
+        const affliation = contributor.affliation;
+        const headshotURL = contributor.headshotURL;
+        const websiteURL = contributor.websiteURL;
+        d3.select("#website-cards")
             .append("div")
             .attr("class", "col-md-4 col-sm-4")
             .html(`
