--- a/templates/join_us.html
+++ b/templates/join_us.html
@@ -45,11 +45,7 @@
 
 <!-- Acknowledgements Section -->
 <p class="infopage-title-1" style="padding-top: 5vh;">Website History</p>
-<p class="infopage-text">This website was built on top of <a class="red-hyper-link" href="https://github.com/Mini-Conf/Mini-Conf" target="_blank">MiniConf</a> project for
-    a virtual conference in a box from <a class="red-hyper-link" href="http://twitter.com/hen_str" target="_blank">Hendrik Strobelt</a> and <a class="red-hyper-link" href="http://twitter.com/srush_nlp" target="_blank">Sasha Rush</a>.
-    Citation relation data used for generating citation graphs are derived from
-the <a class="red-hyper-link" href="https://www.semanticscholar.org/product/api" target="_blank">Semantic Scholar API</a>.
-This work was supported by an NSF grant (CNS-2038897) and the Google Research Scholar Program.
+<p class="infopage-text">This website was created following the discussions at Dagstuhl Seminar - <a class="red-hyper-link" href="https://sites.google.com/view/developmental-machine-learning/home" target="_blank">Developmental Machine Learning: From Human Learning to Machines and Back</a> as a means to connect researchers from developmental and machine learning communities.
 </p>
 
 <!-- Acknowledgements Section -->
