--- a/templates/add_paper.html
+++ b/templates/add_paper.html
@@ -13,7 +13,7 @@
     }
 
     .red-hyper-link {
-        color: #ED1C24 !important;
+        color: #1c6fdd !important;
     }
 
     .footer {
@@ -47,13 +47,13 @@
     <p class="infopage-title-1">Submit a new paper (takes 1 minute)</p>
     <p class="infopage-text">Please fill out <a class="red-hyper-link" href="https://forms.gle/KvVRq2xVKLDUGUza6" target="_blank">this Google form</a>.</p>
     <p class="infopage-title-1">Update an existing paper</p>
-    <p class="infopage-text">Please fill out <a class="red-hyper-link" href="https://forms.gle/jMxDzgRFyHFmPbVE9" target="_blank">this Google form</a>.
+    <p class="infopage-text">Please fill out <a class="red-hyper-link" href="https://forms.gle/n5PR3Ywmbt6oGwrz7" target="_blank">this Google form</a>.
     <br/>
     <br/>
     *Changes will be reflected on the website within a few days.
     <br/>
     <p class="infopage-title-1">Join us</p>
-    <p class="infopage-text">We are looking for volunteers who can moderate and maintain this database. See <a class="red-hyper-link" href="https://neuralfields.cs.brown.edu/join_us.html" target="_blank">Join Us</a> tab.</p>
+    <p class="infopage-text">We are looking for volunteers who can moderate and maintain this database. See <a class="red-hyper-link" href="join_us.html" target="_blank">Join Us</a> tab.</p>
 
     <!-- <p class="infopage-title-1">Optional steps</p>
     <p class="infopage-text">If you would like to see the changes reflected more immediately, please follow these additional
