--- a/templates/components.html
+++ b/templates/components.html
@@ -25,7 +25,7 @@ workshopgroup
 <div class="border-top my-3"></div>
 <div class="row p-4">
   <div class="col-12" style="text-align: center;">
-    <a style="font-size: 25px; color: #ED1C24;" target="_blank" href="{{url}}" >{{name}}</a>
+    <a style="font-size: 25px; color: #1c6fdd;" target="_blank" href="{{url}}" >{{name}}</a>
   </div>
 </div>
 {%- endmacro %}
@@ -34,7 +34,7 @@ workshopgroup
 <div class="border-top my-3"></div>
 <div class="row p-4">
   <div class="col-12" style="text-align: center;">
-    <span style="font-size: 25px; color: #ED1C24;">{{name}}</span>
+    <span style="font-size: 25px; color: #1c6fdd;">{{name}}</span>
   </div>
 </div>
 {%- endmacro %}
