--- a/templates/faq.html
+++ b/templates/faq.html
@@ -11,7 +11,7 @@
     }
 
     .red-hyper-link {
-        color: #ED1C24 !important;
+        color: #1c6fdd !important;
     }
 </style>
 {% endblock %}
