--- a/templates/join_us.html
+++ b/templates/join_us.html
@@ -6,8 +6,9 @@
 {% block head %}
 {{ super() }}
 <style>
-    .red-hyper-link {
-        color: #ED1C24 !important;
+    
+    .blue-hyper-link {
+        color: #1c6fdd !important;
     }
 </style>
 {% endblock %}
@@ -18,7 +19,7 @@
 <!-- Slack channel -->
 <p class="infopage-title-1">Join our Slack channel</p>
 <p class="infopage-text"> Join the Developmental AI community on our
-    <a class="red-hyper-link" href="https://join.slack.com/t/developmentalai/shared_invite/zt-1lyn732dw-excuIUPNlZHHlNb5ZX1gjg">Slack channel</a>.
+    <a class="blue-hyper-link" href="https://join.slack.com/t/developmentalai/shared_invite/zt-1lyn732dw-excuIUPNlZHHlNb5ZX1gjg">Slack channel</a>.
 </p>
 
 
@@ -28,7 +29,7 @@
     so we welcome anyone interested to become a moderator for the database. 
     You can help by submitting new papers, and review paper submissions.
     Please let us know via this short 
-    <a class="red-hyper-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeu0vga6L3YavgMbKKRsTCam-i-b8QHV1JdG9HzLUilEBXv2A/viewform">Google Form</a>
+    <a class="blue-hyper-link" href="https://docs.google.com/forms/d/e/1FAIpQLSeu0vga6L3YavgMbKKRsTCam-i-b8QHV1JdG9HzLUilEBXv2A/viewform">Google Form</a>
     if you are interested!
 </p>
 
@@ -45,16 +46,12 @@
 
 <!-- Acknowledgements Section -->
 <p class="infopage-title-1" style="padding-top: 5vh;">Website History</p>
-<p class="infopage-text">This website was created following the discussions at Dagstuhl Seminar - <a class="red-hyper-link" href="https://sites.google.com/view/developmental-machine-learning/home" target="_blank">Developmental Machine Learning: From Human Learning to Machines and Back</a> as a means to connect researchers from developmental and machine learning communities.
+<p class="infopage-text">This website was created following the discussions at Dagstuhl Seminar - <a class="blue-hyper-link" href="https://sites.google.com/view/developmental-machine-learning/home" target="_blank">Developmental Machine Learning: From Human Learning to Machines and Back</a> as a means to connect researchers from developmental and machine learning communities.
 </p>
 
 <!-- Acknowledgements Section -->
 <p class="infopage-title-1">Acknowledgements</p>
-<p class="infopage-text">This website was built on top of <a class="red-hyper-link" href="https://github.com/Mini-Conf/Mini-Conf" target="_blank">MiniConf</a> project for
-    a virtual conference in a box from <a class="red-hyper-link" href="http://twitter.com/hen_str" target="_blank">Hendrik Strobelt</a> and <a class="red-hyper-link" href="http://twitter.com/srush_nlp" target="_blank">Sasha Rush</a>.
-    Citation relation data used for generating citation graphs are derived from
-the <a class="red-hyper-link" href="https://www.semanticscholar.org/product/api" target="_blank">Semantic Scholar API</a>.
-This work was supported by an NSF grant (CNS-2038897) and the Google Research Scholar Program.
+<p class="infopage-text">This website was built on top of <a class="blue-hyper-link" href="https://github.com/Mini-Conf/Mini-Conf" target="_blank">MiniConf</a> and inspired by <a class="blue-hyper-link" href="https://github.com/brownvc/neural-fields-review" target="_blank">Neural Fields in Visual Computing</a> project.
 </p>
 
 
