--- a/templates/meetings.html
+++ b/templates/meetings.html
@@ -7,7 +7,7 @@
 {{ super() }}
 <style>
     .red-hyper-link {
-        color: #ED1C24 !important;
+        color: #1c6fdd !important;
     }
     .black-hyper-link {
         color: black !important;
