--- a/templates/paper_detail.html
+++ b/templates/paper_detail.html
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="static/js/vis/vis-network.min.js"></script>
 <style>
     .red-hyper-link {
-        color: #ED1C24 !important;
+        color: #1c6fdd !important;
     }
 </style>
 {% endblock %}
