--- a/templates/index_base.html
+++ b/templates/index_base.html
@@ -92,7 +92,7 @@
     ('faq.html', 'FAQ')
     ] -%}
 
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #EFECE5;" id="main-nav">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #e7ebf1;" id="main-nav">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
                   <img class="logo" src="{{config.logo.long}}" style="width: 300px;"/>
